# pymato

./: LICENSE  README.md  package-lock.json  pyproject.toml
src/pymato/: __init__.py  console.py
