[tool.poetry]
name = "pymato"
version = "0.1.0"
description = "Python based Pomodoro Timer with some cli/gui elements."
authors = ["Eric Jones <ericdiemerj@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/TheDiemer/pymato"
repository = "https://github.com/TheDiemer/pymato"
keywords = ["hypermodern", "pomodoro"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
pymato = "pymato.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
